--- a/_assets/scss/_animations.scss
+++ b/_assets/scss/_animations.scss
@@ -1,189 +1,183 @@
-@keyframes fadeIn{
-    0%{
-        opacity: 0;
-    }
-
-    50%{
-        opacity: 0.5;
-    }
-
-    100%{
-        opacity: 1;
-    }
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
-@keyframes fadeOut{
-    0%{
-        opacity: 1;
-    }
-
-    50%{
-        opacity: 0.5;
-    }
-
-    100%{
-        opacity: 0;
-    }
+@keyframes fadeOut {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 0;
+	}
 }
 
-@keyframes fadeInWithMovementAtRight{
-    0%{
-        opacity: 0;
-        transform: translateX(-2rem);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translateX(0);
-    }
+@keyframes fadeInWithMovementAtRight {
+	0% {
+		opacity: 0;
+		transform: translateX(-2rem);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
 }
 
-@keyframes fadeInWithMovementAtLeft{
-    0%{
-        opacity: 0;
-        transform: translateX(2rem);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translateX(0);
-    }
+@keyframes fadeInWithMovementAtLeft {
+	0% {
+		opacity: 0;
+		transform: translateX(2rem);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
 }
 
-@keyframes fadeInWithMovementAtBottom{
-    0%{
-        opacity: 0;
-        transform: translateY(-2em);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translateY(0);
-    }
+@keyframes fadeInWithMovementAtBottom {
+	0% {
+		opacity: 0;
+		transform: translateY(-2em);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
 
-@keyframes changeColorMainToSecond{
-    0%{
-        background-color: var(--site-main-color);
-        color: var(--site-second-color);
-    }
-
-    100%{
-        background-color: var(--site-second-color);
-        color: var(--site-main-color);
-    }
+@keyframes changeColorMainToSecond {
+	0% {
+		background-color: var(--site-main-color);
+		color: var(--site-second-color);
+	}
+	100% {
+		background-color: var(--site-second-color);
+		color: var(--site-main-color);
+	}
 }
 
-@keyframes changeColorSecondToMain{
-    0%{
-        background-color: var(--site-second-color);
-        color: var(--site-main-color);
-    }
-
-    100%{
-        background-color: var(--site-main-color);
-        color: var(--site-second-color);
-    }
+@keyframes changeColorSecondToMain {
+	0% {
+		background-color: var(--site-second-color);
+		color: var(--site-main-color);
+	}
+	100% {
+		background-color: var(--site-main-color);
+		color: var(--site-second-color);
+	}
 }
 
-
-    header nav ul li{
-        opacity: 0;
-        animation: fadeInWithMovementAtRight 0.3s linear;
+.site-header nav ul li {
+	opacity: 0;
+	animation: fadeInWithMovementAtRight 0.3s linear;
+	animation-fill-mode: both;
+	@for $i from 0 through 3 {
+		&:nth-child(#{$i+1}) {
+			animation-delay: 0.3s * $i;
+		}
+    }
+    
+	&.animate a {
+		animation: changeColorMainToSecond 0.3s linear;
         animation-fill-mode: both;
-
-        @for $i from 0 through 3{
-            &:nth-child(#{$i+1}) { animation-delay: 0.3s * $i;}
+        
+		&:hover {
+			animation: changeColorSecondToMain 0.3s linear;
+			animation-fill-mode: both;
         }
         
-        &.animate a{
-            animation: changeColorMainToSecond 0.3s linear;
-            animation-fill-mode: both;
-
-            &:hover{
-                animation: changeColorSecondToMain 0.3s linear;
-                animation-fill-mode: both;
-            }
-        }
-    }
-
-    
-
-    .our-team ul li .member .media:after,
-    .our-team ul li .member .media .info,
-    .posts-headers .post .post-media:after,
-    .film-genres .media:after,
-    .film-genres .media h2,
-    .film-card .film-card-media:after
-    {
-        animation: fadeIn 0.6s linear;
-        animation-fill-mode: both;
-    }
-
-    .our-team ul li .member .media:hover:after,
-    .our-team ul li .member .media:hover .info,
-    .posts-headers .post:hover .post-media:after,
-    .film-genres a:hover .media h2,
-    .film-genres a:hover .media:after,
-    .film-card .film-card-media:hover:after{
-        animation: fadeOut 0.8s linear;
-        animation-fill-mode: both;
-    }
-
-.cta a{
-    opacity: 0;
-    animation: fadeIn 1.5s linear;
-    animation-fill-mode: both;
-    animation-delay: 1s;
+	}
 }
 
+.our-team ul li .member .media:after,
+.our-team ul li .member .media .info,
+.posts-headers .post .post-media:after,
+.film-genres .media:after,
+.film-genres .media h2,
+.film-card .film-card-media:after {
+	animation: fadeIn 0.6s linear;
+	animation-fill-mode: both;
+}
+
+.our-team ul li .member .media:hover:after,
+.our-team ul li .member .media:hover .info,
+.posts-headers .post:hover .post-media:after,
+.film-genres a:hover .media h2,
+.film-genres a:hover .media:after,
+.film-card .film-card-media:hover:after {
+	animation: fadeOut 0.8s linear;
+	animation-fill-mode: both;
+}
+
+.cta a {
+	opacity: 0;
+	animation: fadeIn 1.5s linear;
+	animation-fill-mode: both;
+	animation-delay: 1s;
+}
+
+
 /*About Page animations*/
-.about-filmRater h3{
-    opacity: 0;
-    animation: fadeIn 1.5s linear;
-    animation-fill-mode: both;
-    animation-delay: 0.9s;
+
+.about-filmRater h3 {
+	opacity: 0;
+	animation: fadeIn 1.5s linear;
+	animation-fill-mode: both;
+	animation-delay: 0.9s;
 }
 
 .other-posts h2,
-.other-films h2{
-    animation: fadeInWithMovementAtLeft 0.2s linear;
-    animation-fill-mode: both;
-    animation-delay: 1.2s;
+.other-films h2 {
+	animation: fadeInWithMovementAtLeft 0.2s linear;
+	animation-fill-mode: both;
+	animation-delay: 1.2s;
 }
 
-.other-posts ul li{
-    animation: fadeInWithMovementAtLeft 0.2s linear;
-    animation-fill-mode: both;
-
-    @for $i from 1 through 9{
-        &:nth-child(#{$i}) { animation-delay: 1.2s + 0.2s * $i;}
-    }
+.other-posts ul li {
+	animation: fadeInWithMovementAtLeft 0.2s linear;
+	animation-fill-mode: both;
+	@for $i from 1 through 9 {
+		&:nth-child(#{$i}) {
+			animation-delay: 1.2s + 0.2s * $i;
+		}
+	}
 }
 
-.other-films ul li{
-    animation: fadeInWithMovementAtLeft 0.2s linear;
-    animation-fill-mode: both;
-
-    @for $i from 1 through 9{
-        &:nth-child(#{$i}) { animation-delay: 1.2s + 0.2s * $i;}
-    }
+.other-films ul li {
+	animation: fadeInWithMovementAtLeft 0.2s linear;
+	animation-fill-mode: both;
+	@for $i from 1 through 9 {
+		&:nth-child(#{$i}) {
+			animation-delay: 1.2s + 0.2s * $i;
+		}
+	}
 }
 
-input:checked + nav ul{
-    @include responsive(mobile){
-        animation: fadeInWithMovementAtBottom 0.2s linear;
-        animation-fill-mode: both;
-    }   
+input:checked+nav ul {
+	@include responsive(mobile) {
+		animation: fadeInWithMovementAtBottom 0.2s linear;
+		animation-fill-mode: both;
+	}
 }
 
-input:checked + nav ul li{
-    @include responsive(mobile){
-        animation: fadeInWithMovementAtBottom 0.2s linear;
-        animation-fill-mode: both;
-
-        @for $i from 1 through 9{
-            &:nth-child(#{$i}) { animation-delay: 0.1s * $i;}
-        }
-    }
+input:checked+nav ul li {
+	@include responsive(mobile) {
+		animation: fadeInWithMovementAtBottom 0.2s linear;
+		animation-fill-mode: both;
+		@for $i from 1 through 9 {
+			&:nth-child(#{$i}) {
+				animation-delay: 0.1s * $i;
+			}
+		}
+	}
 }
