--- a/_assets/scss/_film-genres.scss
+++ b/_assets/scss/_film-genres.scss
@@ -1,86 +1,86 @@
-.film-genres{
-    width: 70%;
-    margin: 2rem auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.film-genres {
+	width: 70%;
+	margin: 2rem auto;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
     grid-gap: 4rem;
-
-    @include responsive(mobile){
-        width: 90%;
+    
+	@include responsive(mobile) {
+		width: 90%;
     }
-
-    .section-title{
-        grid-column: 1 / span 2;
-        font-size: 4rem;
-        color: var(--site-main-color);
-        text-align: center;
+    
+	.section-title {
+		grid-column: 1 / span 2;
+		font-size: 4rem;
+		color: var(--site-main-color);
+		text-align: center;
     }
-
-    .content{
-        grid-column: 1 / span 2;
+    
+	.content {
+		grid-column: 1 / span 2;
     }
-
-    .media{
-        overflow: hidden;
-        position: relative;
-        border-radius: 10px;
-        box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
+    
+	.media {
+		overflow: hidden;
+		position: relative;
+		border-radius: 10px;
+		box-shadow: 0px 0px 19px 4px rgba(0, 0, 0, 0.75);
         z-index: -1;
-
-        h2{
-            position: absolute;
-            bottom: 5%;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 2;
-            text-decoration: none;
-            color: var(--site-second-color);
-            font-size: 3rem;
+        
+		h2 {
+			position: absolute;
+			bottom: 5%;
+			left: 50%;
+			transform: translateX(-50%);
+			z-index: 2;
+			text-decoration: none;
+			color: var(--site-second-color);
+			font-size: 3rem;
         }
-
-        &:before{
-            display: block;
-            content: '';
-            padding-top: 56.25%;
+        
+		&:before {
+			display: block;
+			content: '';
+			padding-top: 56.25%;
         }
-
-        &:after{
-            display: block;
-            content: '';
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.7);
-            z-index: 1;
-        }
+        
+		&:after {
+			display: block;
+			content: '';
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background: rgba(0, 0, 0, 0.7);
+			z-index: 1;
+		}
     }
-
-    img{
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
+    
+	img {
+		display: block;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
 }
 
 .genres {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
-    margin-bottom: 4rem;
-
-    @include responsive(mobile){
-        display: grid;
-        grid-template-columns: 1fr;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 2rem;
+	margin-bottom: 4rem;
+    
+    @include responsive(mobile) {
+		display: grid;
+		grid-template-columns: 1fr;
     }
 
-    li{
-        list-style: none;
-    }
+	li {
+		list-style: none;
+	}
 }
