--- a/_assets/scss/_films.scss
+++ b/_assets/scss/_films.scss
@@ -1,102 +1,102 @@
-.films{
-    width: 60%;
-    margin: 0 auto;
-
-    @include responsive(mobile){
-        width: 70%;
+.films {
+	width: 60%;
+	margin: 0 auto;
+    
+    @include responsive(mobile) {
+		width: 70%;
     }
-
-    h2{
-        text-align: center;
-        font-size: 4rem;
-        color: var(--site-main-color);
-        margin-bottom: 4rem;
-    }
+    
+	h2 {
+		text-align: center;
+		font-size: 4rem;
+		color: var(--site-main-color);
+		margin-bottom: 4rem;
+	}
 }
 
-.film-card{
-    list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    margin-bottom: 4rem;
-    grid-gap: 2rem;
-    border: 2px solid var(--site-main-color);
-    border-radius: 10px;
-    padding: 2rem;
-    box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
-
-    @include responsive(mobile){
-        grid-template-columns: 1fr;
-        grid-gap: 2rem;
-    }
-
-    .film-card-media{
-        overflow: hidden;
-        position: relative;
-        border-radius: 10px;
-        box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
-
-        &:before{
-            display: block;
-            content: '';
-            padding: 75%;
-        }
-
-        &:after{
-            display: block;
-            content: '';
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.5);
-            pointer-events: none;
-        }
-    }
-
-    img{
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
-
-    .film-card-content{
-        .title{
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        a{
-            text-decoration: none;
-            color: var(--site-main-color);
-
-            &:hover{
-                text-decoration: underline;
-            }
-        }
-
-        .rating{
-            margin-bottom: 2rem;
+.film-card {
+	list-style: none;
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	margin-bottom: 4rem;
+	grid-gap: 2rem;
+	border: 2px solid var(--site-main-color);
+	border-radius: 10px;
+	padding: 2rem;
+	box-shadow: 0px 0px 19px 4px rgba(0, 0, 0, 0.75);
     
-            i{
-                color: var(--site-main-color);
-            }
+    @include responsive(mobile) {
+		grid-template-columns: 1fr;
+		grid-gap: 2rem;
+    }
+    
+	.film-card-media {
+		overflow: hidden;
+		position: relative;
+		border-radius: 10px;
+		box-shadow: 0px 0px 19px 4px rgba(0, 0, 0, 0.75);
+        
+        &:before {
+			display: block;
+			content: '';
+			padding: 75%;
+		}
+        
+        &:after {
+			display: block;
+			content: '';
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background: rgba(0, 0, 0, 0.5);
+			pointer-events: none;
+		}
+    }
+    
+	img {
+		display: block;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+    }
+    
+	.film-card-content {
+        .title {
+			font-size: 2rem;
+			margin-bottom: 1rem;
         }
+        
+		a {
+			text-decoration: none;
+			color: var(--site-main-color);
+            
+            &:hover {
+				text-decoration: underline;
+			}
+        }
+        
+		.rating {
+			margin-bottom: 2rem;
+            
+            i {
+				color: var(--site-main-color);
+			}
+		}
     }
-
-    span{
-        color: var(--site-main-color);
-        font-weight: bold;
+    
+	span {
+		color: var(--site-main-color);
+		font-weight: bold;
     }
-
-    .title span{
-        color: var(--site-third-color);
-        font-weight: 500;
-    } 
+    
+	.title span {
+		color: var(--site-third-color);
+		font-weight: 500;
+	}
 }
