--- a/_assets/scss/_footer.scss
+++ b/_assets/scss/_footer.scss
@@ -1,98 +1,94 @@
-footer{
-    background: var(--site-main-color);
-    color: var(--site-second-color);
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: [content-start] repeat(3, 1fr) [content-end];
+.site-footer {
+	background: var(--site-main-color);
+	color: var(--site-second-color);
+	padding: 1rem;
+	display: grid;
+	grid-template-columns: [content-start] repeat(3, 1fr) [content-end];
     grid-template-rows: 100px 20px;
-
-    @include responsive(mobile){
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: repeat(3, 1fr) 20px;
-        grid-gap: 1rem;
-    }
-
-    h2{
-        margin-bottom: 1.5rem;
-        text-align: center;
-        font-size: 1.6rem;
-    }
-
-    .#{&}-text{
-        text-align: center;
-
-        h2{
-            margin-bottom: 0.5rem;
-        }
-    }
-
-    .contact-us{
-        @include responsive(mobile){
-            grid-row: 2 / span 1;
-        }
-
-        h2{
-            @include responsive(mobile){
-                margin-bottom: 0.5rem;
-            }
-        }
-
-        ul{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
     
+	@include responsive(mobile) {
+		display: grid;
+		grid-template-columns: 100%;
+		grid-template-rows: repeat(3, 1fr) 20px;
+		grid-gap: 1rem;
+    }
+    
+	h2 {
+		margin-bottom: 1.5rem;
+		text-align: center;
+		font-size: 1.6rem;
+    }
+    
+	.footer-text {
+		text-align: center;
+        
+        h2 {
+			margin-bottom: 0.5rem;
+		}
+    }
+    
+	.contact-us {
+        @include responsive(mobile) {
+			grid-row: 2 / span 1;
+        }
+        
+		h2 {
+			@include responsive(mobile) {
+				margin-bottom: 0.5rem;
+			}
+        }
+        
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
             
+            li {
+				list-style: none;
+				flex: 0 0 45%;
+				text-align: center;
+                
+                @include responsive(tablet) {
+					flex: 1 1 100%;
+					margin-bottom: 1rem;
+				}
+			}
+		}
+    }
     
-            li{
-                list-style: none;
-                flex: 0 0 45%;
-                text-align: center;
+	.follow-us {
+		@include responsive(mobile) {
+			grid-row: 3 / span 1;
+        }
+        
+		ul {
+			display: flex;
+			justify-content: center;
+        }
+        
+		li {
+			list-style: none;
+			flex: 0 0 10%;
+			text-align: center;
+        }
+        
+		i {
+			color: var(--site-second-color);
+			font-size: 1.5rem;
+			@include responsive(mobile) {
+				font-size: 2rem;
+			}
+		}
+    }
     
-                @include responsive(tablet){
-                    flex: 1 1 100%;
-                    margin-bottom: 1rem;
-                }
-            }
-        }
-    }
-
-    .follow-us{
-        @include responsive(mobile){
-            grid-row: 3 / span 1;
-        }
-
-        ul{
-            display: flex;
-            justify-content: center;
-        }
-
-        li{
-            list-style: none;
-            flex: 0 0 10%;
-            text-align: center;
-        }
-
-        i{
-            color: var(--site-second-color);
-            font-size: 1.5rem;
-
-            @include responsive(mobile){
-                font-size: 2rem;
-            }
-        }
-    }
-
-    .rights{
-        text-align: center;
-        grid-column: content-start / content-end;
-        margin-bottom: 0;
-
-        @include responsive(mobile){
-            grid-row: 4 / span 1;
-            text-align: center;
-            grid-column: 1 / span 1;
-        }
-    }
+	.rights {
+		text-align: center;
+		grid-column: content-start / content-end;
+		margin-bottom: 0;
+		@include responsive(mobile) {
+			grid-row: 4 / span 1;
+			text-align: center;
+			grid-column: 1 / span 1;
+		}
+	}
 }
