--- a/_assets/scss/_header.scss
+++ b/_assets/scss/_header.scss
@@ -1,156 +1,174 @@
-header{
-    padding: 2rem;
-    display: flex;
-    align-items: center;
+.site-header {
+	padding: 2rem;
+	display: flex;
+	align-items: center;
     justify-content: space-between;
 
-    input{
-        opacity: 0;
-        pointer-events: none;
+    @include responsive(tablet) {
+        flex-wrap: wrap;
     }
-
-    label{
-        display: none;
-
-        @include responsive(tablet){
-            display: block;
-        }
-
-        i{
-            color: var(--site-main-color);
-            font-size: 2rem;
-        }
-
-        span{
-            color: var(--site-main-color);
-            font-size: 2rem;
-        }
+    
+	input {
+		opacity: 0;
+		pointer-events: none;
     }
-    div.logo{
-        flex: 0 0 30%;
+    
+	label {
+		display: none;
+        
+        @include responsive(tablet) {
+			display: block;
+        }
+        
+		i {
+			color: var(--site-main-color);
+			font-size: 2rem;
+        }
+        
+		span {
+			color: var(--site-main-color);
+			font-size: 2rem;
+		}
+    }
+    
+	.logo {
+		flex: 0 0 30%;
         margin-right: auto;
-
-        a{
-            text-decoration: none;
-            color: var(--site-main-color);
-            font-weight: bold;
-            font-family: 'PT Sans';
+        
+        @include responsive(tablet) {
+            flex: 1 1 100%;
+		    margin-right: 0;
+		    text-align: center;
+        }
+        
+        a {
+			text-decoration: none;
+			color: var(--site-main-color);
+			font-weight: bold;
+			font-family: 'PT Sans';
             font-size: 2rem;
+            
+            @include responsive(tablet) {
+                font-size: 3.5rem;
+            }
         }
-
-        p{
+        
+		p {
             color: var(--site-main-color);
-        }
+            
+            @include responsive(tablet) {
+                font-size: 2rem;
+            }
+		}
     }
 
-    nav{
-        flex: 0 0 70%;
-        height: 100%;
-        display: flex;
-
-        ul{
-            display: flex;
-            flex: 1 1 100%;
-            justify-content: space-evenly;
+    input {
+        & + nav ul {
+            @include responsive(tablet) {
+                display: none;
+            }
         }
 
-        li{
-            list-style: none;
-            display: block;
-            text-align: center;
-            flex: 0 0 18%;
+        & + nav label .open {
+            @include responsive(tablet) {
+                display: inline;
+                font-weight: bold;
+            }
         }
 
-        a{
-            text-decoration: none;
-            display: block;
-            color: var(--site-main-color);
-            font-size: 1.4rem;
-            padding: 0.5rem;
-            border: 2px solid var(--site-main-color);
-            border-radius: 10px;
+        & + nav label .close {
+            @include responsive(tablet) {
+                display: none;
+            }
+        }
 
-            &:hover{
-                background-color: var(--site-main-color);
-                color: var(--site-second-color);
+        &:checked + nav label span.close {
+            @include responsive(tablet) {
+                display: inline;
+		        font-weight: bold;
+            }
+        }
+
+        &:checked + nav a {
+            @include responsive(tablet) {
+                padding: 1rem 0;
+            }
+        }
+
+        &:checked + nav label span.open {
+            @include responsive(tablet) {
+                display: none;
+            }
+        }
+
+        &:checked + nav ul {
+            @include responsive(tablet) {
+                display: block;
+		        border-top: 2px solid var(--site-main-color);
+		        border-bottom: 2px solid var(--site-main-color);
             }
         }
     }
-}
-
-.selected a{
-    background-color: var(--site-main-color);
-    color: var(--site-second-color);
-}
-
-@include responsive(tablet){
-    header{
-        flex-wrap: wrap;
-    }
-
-    header div.logo{
-        flex: 1 1 100%;
-        margin-right: 0;
-        text-align: center;
+    
+	nav {
+		flex: 0 0 70%;
+		height: 100%;
+        display: flex;
         
-    }
+        @include responsive(tablet) {
+            justify-content: center;
+		    flex-wrap: wrap;
+		    flex: 1 1 100%;
+        }
 
-    header div.logo a{
-        font-size: 3.5rem;
-    }
+        label {
+            @include responsive(tablet) {
+                margin-bottom: 1rem;
+            }
+        }
 
-    header div.logo p{
-        font-size: 2rem;
-    }
+        ul {
+			display: flex;
+			flex: 1 1 100%;
+			justify-content: space-evenly;
+        }
+        
+		li {
+			list-style: none;
+			display: block;
+			text-align: center;
+            flex: 0 0 18%;
 
-    header nav{
-        justify-content: center;
-        flex-wrap: wrap;
-        flex: 1 1 100%;
-    }
+            @include responsive(tablet) {
+                margin-bottom: 0.5rem;
+		        cursor: pointer;
+            }
+            
+            :first-child {
+                @include responsive(tablet) {
+                    margin-top: 0.5rem;
+                }
+            }
+        }
+        
+		a {
+			text-decoration: none;
+			display: block;
+			color: var(--site-main-color);
+			font-size: 1.4rem;
+			padding: 0.5rem;
+			border: 2px solid var(--site-main-color);
+			border-radius: 10px;
+            
+            &:hover {
+				background-color: var(--site-main-color);
+				color: var(--site-second-color);
+			}
+		}
+	}
+}
 
-    nav label {
-        margin-bottom: 1rem;
-    }
-
-    input + nav ul{
-        display: none;
-    }
-
-    input + nav label span.open{
-        display: inline;
-        font-weight: bold;
-    }
-
-    input + nav label span.close{
-        display: none;
-    }
-
-    input:checked + nav label span.close{
-        display: inline;
-        font-weight: bold;
-    }
-
-    input:checked + nav a{
-        padding: 1rem 0;
-    }
-
-    input:checked + nav label span.open{
-       display: none;
-    }
-
-    input:checked + nav ul{
-        display: block;
-        border-top: 2px solid var(--site-main-color);
-        border-bottom: 2px solid var(--site-main-color);
-    }
-
-    header nav ul li:first-child{
-        margin-top: 0.5rem;
-    }
-
-    header nav ul li{
-        margin-bottom: 0.5rem;
-        cursor: pointer;
-    }
+.site-header .selected a {
+	background-color: var(--site-main-color);
+	color: var(--site-second-color);
 }
