--- a/_assets/scss/_typography.scss
+++ b/_assets/scss/_typography.scss
@@ -1,28 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap');
 
-html{
-    font-size: var(--site-font-size-mobile);
-    line-height: 1.2;
-    font-family: var(--site-content-font), sans-serif;
+html {
+	font-size: var(--site-font-size-mobile);
+	line-height: 1.2;
+	font-family: var(--site-content-font), sans-serif;
 }
 
-input, button, blockquote{
-    font-family: inherit;
+input,
+button,
+blockquote {
+	font-family: inherit;
 }
 
-h1, h2, h3, h4, h5, h6{
-    font-family: var(--site-headings-font), serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: var(--site-headings-font), serif;
 }
 
-h1{font-size: 2.2rem;}
-h2{font-size: 2.0rem;}
-h3{font-size: 1.8rem;}
-h4{font-size: 1.6rem;}
-h5{font-size: 1.4rem;}
-h6{font-size: 1.2rem;}
+h1 {
+	font-size: 2.2rem;
+}
 
-html{
-    @include responsive( laptop ) {
-        font-size: var(--site-font-size-larger);
-    }
+h2 {
+	font-size: 2.0rem;
+}
+
+h3 {
+	font-size: 1.8rem;
+}
+
+h4 {
+	font-size: 1.6rem;
+}
+
+h5 {
+	font-size: 1.4rem;
+}
+
+h6 {
+	font-size: 1.2rem;
+}
+
+html {
+	@include responsive( laptop) {
+		font-size: var(--site-font-size-larger);
+	}
 }
