--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% include head.html %}
     <title>{{page.title}}</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="site">
         <header class="site-header">
@@ -55,4 +51,5 @@
         </footer>
     </div>
 </body>
+
 </html>
