Added all layouts except main as _includes and now the website has only main layout

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,9 +12,21 @@
             {% include header.html %}
         </header>
 
-        <main class="site-main">
-            {{content}}
-        </main>
+
+        {% if page.order %}
+            <main class="site-main">
+                {{content}}
+            </main>
+        {% elsif page.film-title %}
+            {% include film.html %}
+        
+        {% elsif page.film-genre %}
+            {% include film-genre.html %}
+        
+        {% elsif page.author %}
+            {% include post.html %}
+        {% endif %}
+
 
         <footer class="site-footer">
             {% include footer.html %}
