--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -398,7 +398,8 @@ h6 {
     color: var(--site-second-color);
     flex: 0 0 55%;
     padding: 1rem;
-    border: 2px solid var(--site-main-color); }
+    border: 2px solid var(--site-main-color);
+    margin: 0 auto; }
     @media (max-width: 1023px) {
       .cta a {
         flex: 1 1 100%; } }
@@ -417,7 +418,8 @@ h6 {
       flex-wrap: wrap; } }
   .our-team li {
     flex: 0 0 22%;
-    list-style: none; }
+    list-style: none;
+    margin: 0 auto; }
     @media (max-width: 1023px) {
       .our-team li {
         flex: 1 1 100%; } }
@@ -501,7 +503,8 @@ h6 {
       .newsletter form p {
         width: 70%; } }
     .newsletter form p input {
-      border-radius: 5px; }
+      border-radius: 5px;
+      margin: 0 auto; }
       @media (max-width: 1159px) {
         .newsletter form p input {
           flex: 1 1 100%; } }
